# app_com_openclaw

./: .gitignore  PRIVACY_POLICY.md  README.md  UNBND_ARCHITECTURE.md  capacitor.config.ts  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  sw.js  vite.config.gh.ts  vite.config.ts  vite.config.ts.bak
.github/workflows/: deploy.yml
android/: capacitor.settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/openclaw/nodi/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/: index-B-enFNOM.js  index-BLsdb1C-.js  index-Cqy0r98J.css  index-XaY0MibM.js
assets/assets/: index-CMOC1jkX.css
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/App/CapApp-SPM/: Package.swift
public/: sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatBubble.tsx  ChatInput.tsx  StatusIndicator.tsx  TabBar.tsx  TypingIndicator.tsx
src/data/: tools.ts
src/hooks/: useClawSouls.ts  useOpenClaw.ts  useSpeechRecognition.ts
src/screens/: Chat.tsx  Onboarding.tsx  Settings.tsx  Souls.tsx  ToolChat.tsx  Tools.tsx
src/store/: nodStore.ts
